[tool.poetry]
name = "volume"
version = "0.1.0"
description = ""
authors = ["Andrew Magee <amagee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dbus-python = "^1.2.18"
notify2 = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
volume = "volume:main"
